--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Hi, I'm Parinita
+subtitle: Software Developer | Med Tech Enthusiast | Cat Lover
 use-site-title: true
 ---
 
