Modified skills images

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ use-site-title: true
 <h1>Skills: </h1>
 <div class="row">
   <div class="column">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg" alt="Snow" style="width:100%">
+    <img src="\img\python.png" alt="Python" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg" alt="Forest" style="width:100%">
+    <img src="\img\java.png" alt="Java" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/An_up-close_picture_of_a_curious_male_domestic_shorthair_tabby_cat.jpg" alt="Mountains" style="width:100%">
+    <img src="\img\c.jpeg" alt="C" style="width:100%">
   </div>
 </div>
