--- a/index.html
+++ b/index.html
@@ -83,3 +83,19 @@ use-site-title: true
     <img src="\img\c.jpeg" alt="C" style="width:100%">
   </div>
 </div>
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+/* Create three equal columns that sits next to each other */
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+</style>
