--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ use-site-title: true
     <img src="\img\java.png" alt="Java" style="width:100%">
   </div>
   <div class="column">
-    <img src="\img\c.jpeg" alt="C" style="width:100%">
+    <img src="\img\c.jpg" alt="C" style="width:100%">
   </div>
 </div>
 
