--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ subtitle: Software Developer | Med Tech Enthusiast | Cat Lover
 use-site-title: true
 ---
 
-<p>I'm a student Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<\p>
+<p>I'm a student Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.</p>
 
-Critical Care Research Developer @ St. Michael's Hospital
-Computer Science Student @ University of Toronto
+<p>Critical Care Research Developer @ St. Michael's Hospital</p>
+<p>Computer Science Student @ University of Toronto</p>
 
 <h1>Skills: </h1>
 <div class="row">
