--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Software Developer | Med Tech Enthusiast | Cat Lover
 use-site-title: true
 ---
 
-<p>I'm a student Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.</p>
+<p>I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.</p>
 
 <p>Critical Care Research Developer @ St. Michael's Hospital</p>
 <p>Computer Science Student @ University of Toronto</p>
