Reading week initial commit

--- a/index.html
+++ b/index.html
@@ -1,40 +1,101 @@
 ---
 layout: page
-title: Hi, I'm Parinita
+title: Hi, I'm Parinita!
 subtitle: Software Developer | Med Tech Enthusiast | Cat Lover
 use-site-title: true
+bigimg: "/img/desk2.jpeg"
 ---
+<div class="person1" style="float:left; display:inline-block; ">
+       <span style="float:left;width: 50%;">
+       <img src="/img/pari.JPG"
+            width="335" height="450" />
+       </span>
+       <span style="float:right;width: 50%;">
+       <p style="float:right; display:block;">
+        I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
+        <br/>
+        Critical Care Research Developer @ St. Michael's Hospital<br/>
+        <br/>
+        Computer Science Student @ University of Toronto
+        </p>
+       </span>
+</div>
 
-<p>I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.</p>
-
-<p>Critical Care Research Developer @ St. Michael's Hospital</p>
-<p>Computer Science Student @ University of Toronto</p>
-
+&nbsp;
 <h1>Skills: </h1>
-<div class="row">
-  <div class="column">
-    <img src="\img\python.png" alt="Python" style="width:100%">
+
+<div class="row text-center">
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <!--<i class="fa fa-square fa-stack-2x stack-color"></i>
+          <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>-->
+          <img src="\img\python.png" alt="Python" style="width:100%;height:100%">
+        </span>
+        <h4>Python</h4>
+        <hr class="seperator" />
+        <!--<p class="text-muted">A simple Phabricator Conduit client made with Powershell.</p>
+        <hr class="seperator" />
+        <img src="https://img.shields.io/github/forks/OCram85/Ponduit.svg?style=social&amp;label=Fork" alt="Github" title="Github Forks" />
+        <img src="https://img.shields.io/github/stars/OCram85/Ponduit.svg?style=social&amp;label=Stars" alt="Github" title="Github Stars" />-->
+    </div>
   </div>
-  <div class="column">
-    <img src="\img\java.png" alt="Java" style="width:100%">
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <img src="\img\java.png" alt="Java" style="width:100%;height:100%">
+        </span>
+        &nbsp;
+        <h4>Java</h4>
+        <hr class="seperator" />
+    </div>
   </div>
-  <div class="column">
-    <img src="\img\c.png" alt="C" style="width:100%">
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <img src="\img\C.png" alt="C" style="width:100%;height:100%">
+        </span>
+        &nbsp;
+        <h4>C</h4>
+        <hr class="seperator" />
+    </div>
   </div>
 </div>
 
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.row {
-  display: flex;
-}
-
-/* Create three equal columns that sits next to each other */
-.column {
-  flex: 33.33%;
-  padding: 5px;
-}
-</style>
+<div class="row text-center">
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <!--<i class="fa fa-square fa-stack-2x stack-color"></i>
+          <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>-->
+          <img src="\img\html.png" alt="HTML" style="width:100%;height:100%">
+        </span>
+        <h4>HTML</h4>
+        <hr class="seperator" />
+        <!--<p class="text-muted">A simple Phabricator Conduit client made with Powershell.</p>
+        <hr class="seperator" />
+        <img src="https://img.shields.io/github/forks/OCram85/Ponduit.svg?style=social&amp;label=Fork" alt="Github" title="Github Forks" />
+        <img src="https://img.shields.io/github/stars/OCram85/Ponduit.svg?style=social&amp;label=Stars" alt="Github" title="Github Stars" />-->
+    </div>
+  </div>
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <img src="\img\css.png" alt="CSS" style="width:100%;height:100%">
+        </span>
+        &nbsp;
+        <h4>CSS</h4>
+        <hr class="seperator" />
+    </div>
+  </div>
+  <div class="col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <div class="project-card">
+        <span class="fa-stack fa-4x">
+          <img src="\img\r.png" alt="R" style="width:100%;height:80%">
+        </span>
+        &nbsp;
+        <h4>R</h4>
+        <hr class="seperator" />
+    </div>
+  </div>
+</div>
