--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@ layout: page
 title: Hi, I'm Parinita!
 subtitle: Software Developer | Med Tech Enthusiast | Cat Lover
 use-site-title: true
-bigimg: "/img/desk2.jpeg"
+bigimg: "/img/background.jpg"
 ---
+<div class="row text-center">
+  <div class="col-md-6 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <img src="/img/pari.JPG"
+         width="335" height="450" />
+  </div>
+  <div class="col-md-6 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center">
+    <p style="float:right; display:block;">
+     I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
+     <br/>
+     Critical Care Research Developer @
+     <a href="http://stmichaelshospitalresearch.ca" target="_blank" class="link"> St. Michael's Hospital</a><br/>
+     <br/>
+     Computer Science @ University of Toronto
+     </p>
+  </div>
+</div>
+<!--
 <div class="person1" style="float:left; display:inline-block; ">
        <span style="float:left;width: 50%;">
        <img src="/img/pari.JPG"
@@ -19,7 +36,7 @@ bigimg: "/img/desk2.jpeg"
         Computer Science Student @ University of Toronto
         </p>
        </span>
-</div>
+</div>-->
 
 &nbsp;
 <h1>Skills: </h1>
