Added BMO tagline

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ bigimg: "/img/background.jpg"
     <p style="float:right; display:block;">
      I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
      <br/>
+     Incoming Software Developer Intern @ BMO <br/>
+     <br/>
      Critical Care Research Developer @
      <a href="http://stmichaelshospitalresearch.ca" target="_blank" class="link"> St. Michael's Hospital</a><br/>
      <br/>
