--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ bigimg: "/img/background.jpg"
     <p style="float:right; display:block;">
      I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
      <br/>
-     Incoming Software Developer Intern @ BMO <br/>
+     Software Developer Intern @ BMO <br/>
      <br/>
      Critical Care Research Developer @
      <a href="http://stmichaelshospitalresearch.ca" target="_blank" class="link"> St. Michael's Hospital</a><br/>
@@ -23,22 +23,6 @@ bigimg: "/img/background.jpg"
      </p>
   </div>
 </div>
-<!--
-<div class="person1" style="float:left; display:inline-block; ">
-       <span style="float:left;width: 50%;">
-       <img src="/img/pari.JPG"
-            width="335" height="450" />
-       </span>
-       <span style="float:right;width: 50%;">
-       <p style="float:right; display:block;">
-        I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
-        <br/>
-        Critical Care Research Developer @ St. Michael's Hospital<br/>
-        <br/>
-        Computer Science Student @ University of Toronto
-        </p>
-       </span>
-</div>-->
 
 &nbsp;
 <h1>Skills: </h1>
