Updated landing page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ bigimg: "/img/background.jpg"
     <p style="float:right; display:block;">
      I'm a Computer Science and Statistics student interested in Med Tech and Software Development with a passion for social good.<br/>
      <br/>
+     Incoming Research Student @
+     <a href="http://www.tyrrell4innovation.ca/#" target="_blank" class="link"> Professor Pascal Tyrrell's Lab</a><br/>
+     <br/>
      Software Developer Intern @ BMO <br/>
      <br/>
      Critical Care Research Developer @
